Lesson To Finished

--- a/src/demoProjects/rentACar/Application/Application.csproj
+++ b/src/demoProjects/rentACar/Application/Application.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\" />
+    <Folder Include="Features\Brands\Constants\" />
+    <Folder Include="Features\Brands\Models\" />
+    <Folder Include="Features\Brands\Queries\" />
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+	</ItemGroup>
 
-  <ItemGroup>
+
+	<ItemGroup>
+    <ProjectReference Include="..\..\..\corePackages\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\..\..\corePackages\Core.Persistence\Core.Persistence.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
