--- a/src/demoProjects/rentACar/WebAPI/appsettings.json
+++ b/src/demoProjects/rentACar/WebAPI/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "RentACarCampConnectionString": "Server=LAPTOP-4UM0D685\\SQLEXPRESS;Database=RentACarCampDb; Trusted_Connection=True;"
   },
+  "TokenOptions": {
+    "Audience": "rentacar@rentacar.com",
+    "Issuer": "rentacar@rentacar.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "berkcanberkcanberkcanberkcan",
+    "RefreshTokenTTL": 2
+  },
   "AllowedHosts": "*"
 }
